--- a/Uplay.ini
+++ b/Uplay.ini
@@ -1,30 +1,21 @@
+; A FILE WILL BE GENERATED UPON OPENING GAME!
 [Uplay]
 ; Application ownership status (0 = not owned, 1 = owned)
 IsAppOwned=1
-
 ; Connection mode (0 = online, 1 = offline)
 UplayConnection=0
-
-; Application ID (change this to match your game's App ID)
-AppId=3584
-
-; User credentials
-Username=Example
-Email=exameple@example.ex
-Password=example123
-
-; Save game directory (use "Default" for automatic directory based on DLL location)
-SavePath=Default
-
+;Application ID (change this to match your game's App ID)
+AppId=000
+; User credential
+Username=Rat
+Email=UplayEmu@rat43.com
+Password=UplayPassword74
 ; Game language (ISO language code)
 Language=en-US
-
 ; CD Key for the game
-CdKey=0000
-
+CdKey=1111-2222-3333-4444
 ; User ID (UUID format)
 UserId=c91c91c9-1c91-c91c-91c9-1c91c91c91c9
-
 ; Ticket ID for authentication
 TickedId=noT456umPqRt
 
