--- a/Uplay.ini
+++ b/Uplay.ini
@@ -22,3 +22,7 @@ TickedId=noT456umPqRt
 ; Enable logging to uplay_emu.log or Console (0 = disabled, 1 = enabled)
 Logging=0
 EnableConsole=0
+
+; Enable Friends/Party features (0 = disabled, 1 = enabled, this is for returning values to the game in case of crashing)
+Friends=0
+Party=0
