--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,22 +29,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Cache MSYS2
-      uses: actions/cache@v4
-      id: cache-msys2
-      with:
-        path: ${{ runner.temp }}/msys64
-        key: msys2-${{ matrix.msystem }}-${{ hashFiles('.github/workflows/build.yml') }}
-        restore-keys: |
-          msys2-${{ matrix.msystem }}-
-
     - name: Setup MSYS2
       uses: msys2/setup-msys2@v2
       with:
         msystem: ${{ matrix.msystem }}
         install: mingw-w64-${{ matrix.arch == 'x64' && 'x86_64' || 'i686' }}-gcc make
-        update: ${{ steps.cache-msys2.outputs.cache-hit != 'true' }}
-        location: ${{ runner.temp }}
+        cache: true
         
     - name: Build with Make
       shell: msys2 {0}
