file example changes [skip ci]

--- a/Uplay.ini
+++ b/Uplay.ini
@@ -26,3 +26,11 @@ EnableConsole=0
 ; Enable Friends/Party features (0 = disabled, 1 = enabled, this is for returning values to the game in case of crashing)
 Friends=0
 Party=0
+
+; Steam integration
+; (if this is enabled on the game it wont be disabled)
+; (you can check this by checking if a game starts steam on exe open)
+[Steam]
+Enable=0
+; Steamid to return to the game (change this to match your game's Steam App ID, check store link last digits)
+Id=0
