ci/compile test

--- a/Uplay.ini
+++ b/Uplay.ini
@@ -1,4 +1,4 @@
-; A FILE WILL BE GENERATED UPON OPENING GAME!
+; A FILE WILL BE GENERATED UPON OPENING GAME!!
 [Uplay]
 ; Application ownership status (0 = not owned, 1 = owned)
 IsAppOwned=1
